--- a/敏捷.md
+++ b/敏捷.md
@@ -14,3 +14,9 @@ scrum待办事项
    制定迭代的进度安排，迭代的开始结束时间，关键检查点，评审时间。
    当确定迭代计划时，可以参考发布计划。
 ```
+# 敏捷中各角色的职责
+```
+产品负责人
+   确保工作按照领导层的指示方向和产品愿景展开
+
+```
