--- a/敏捷.md
+++ b/敏捷.md
@@ -18,5 +18,18 @@ scrum待办事项
 ```
 产品负责人
    确保工作按照领导层的指示方向和产品愿景展开
-
+```
+# 敏捷中的可视化工具
+```
+1、信息发射源
+   一种可视化工具，用于像团队成员和利益相关者展示项目的关键信息。包含任务板、燃尽图、燃起图、任务板、问题列表、风险矩阵。
+2、燃尽图
+   剩余工作的趋势，横轴时间，纵轴剩余工作量。
+3、燃起图
+   已完成工作的趋势，横轴时间，纵轴已完成工作量。
+4、任务板
+   包含几列，代表todo，doing，done，每个任务用卡片表示，任务描述、负责人、预计完成时间。
+   开发团队也可以通过任务板来整理工作+将剩余工作可视化。
+5、看板
+   包含几列，todo，doing，done，可以设置限制在置评（WIP）数量
 ```
