--- a/敏捷.md
+++ b/敏捷.md
@@ -24,7 +24,7 @@ scrum待办事项
 1、信息发射源
    一种可视化工具，用于像团队成员和利益相关者展示项目的关键信息。包含任务板、燃尽图、燃起图、任务板、问题列表、风险矩阵。
 2、燃尽图
-   剩余工作的趋势，横轴时间，纵轴剩余工作量。
+   剩余工作的趋势，横轴时间（一般代表一次迭代的时间），纵轴剩余工作量。
 3、燃起图
    已完成工作的趋势，横轴时间，纵轴已完成工作量。
 4、任务板
