--- a/风险.md
+++ b/风险.md
@@ -1,4 +1,24 @@
-## 风险相关
+## 子过程
+```
+计划过程组
+   11.1 规划风险管理
+         O：风险管理计划
+   11.2 识别风险
+         O：风险登记册
+   11.3 实施定性风险分析 （风险分级、分类）
+         TT ：概率和影响矩阵
+         O：O：风险登记册 （加列，如风险级别高中低）
+   11.4 实施定量风险分析
+   11.5 规划风险应对
+```
+## 相关技术
+```
+1、概率和影响矩阵
+<img width="1027" alt="image" src="https://github.com/user-attachments/assets/49ef22ae-d1fb-4e58-9c20-62d3ee84c867">
+![Uploading image.png…]()
+
+```
+## 风险相关文件
 ```
 1、风险管理计划 （确定风险管理的目标，流程，角色职责，预算）
    目标：确定风险管理的总体目标，如降低风险发生的可能性和影响程度。
