--- a/风险.md
+++ b/风险.md
@@ -12,12 +12,10 @@
    11.5 规划风险应对
 ```
 ## 相关技术
-```
-1、概率和影响矩阵
+概率和影响矩阵
 <img width="1027" alt="image" src="https://github.com/user-attachments/assets/49ef22ae-d1fb-4e58-9c20-62d3ee84c867">
-![Uploading image.png…]()
+<img width="842" alt="image" src="https://github.com/user-attachments/assets/4c6a97ea-ce58-4428-bc05-aa0857f20bf8">
 
-```
 ## 风险相关文件
 ```
 1、风险管理计划 （确定风险管理的目标，流程，角色职责，预算）
