--- a/风险.md
+++ b/风险.md
@@ -10,6 +10,10 @@
          O：O：风险登记册 （加列，如风险级别高中低）
    11.4 实施定量风险分析
    11.5 规划风险应对
+执行过程组
+   11.6 实施风险因对
+监控过程组
+   11.7 监控风险
 ```
 ## 相关技术
 概率和影响矩阵
