--- a/风险.md
+++ b/风险.md
@@ -17,8 +17,8 @@
 ```
 ## 相关技术
 概率和影响矩阵
-<img width="1027" alt="image" src="https://github.com/user-attachments/assets/49ef22ae-d1fb-4e58-9c20-62d3ee84c867">
-<img width="842" alt="image" src="https://github.com/user-attachments/assets/4c6a97ea-ce58-4428-bc05-aa0857f20bf8">
+<img width="100px" alt="image" src="https://github.com/user-attachments/assets/49ef22ae-d1fb-4e58-9c20-62d3ee84c867">
+<img width="100px" alt="image" src="https://github.com/user-attachments/assets/4c6a97ea-ce58-4428-bc05-aa0857f20bf8">
 
 ## 风险相关文件
 ```
