--- a/风险.md
+++ b/风险.md
@@ -16,7 +16,7 @@
    11.7 监控风险
 ```
 ## 相关技术
-`概率和影响矩阵`
+概率和影响矩阵 用于定性风险分析，对风险分级分类
 <img width="500px" alt="image" src="https://github.com/user-attachments/assets/49ef22ae-d1fb-4e58-9c20-62d3ee84c867">
 <img width="500px" alt="image" src="https://github.com/user-attachments/assets/4c6a97ea-ce58-4428-bc05-aa0857f20bf8">
 
