--- a/风险.md
+++ b/风险.md
@@ -16,9 +16,24 @@
    11.7 监控风险
 ```
 ## 相关技术
-概率和影响矩阵 用于定性风险分析，对风险分级分类
+### 定性风险分析的技术
+1、概率和影响矩阵
 <img width="500px" alt="image" src="https://github.com/user-attachments/assets/49ef22ae-d1fb-4e58-9c20-62d3ee84c867">
 <img width="500px" alt="image" src="https://github.com/user-attachments/assets/4c6a97ea-ce58-4428-bc05-aa0857f20bf8">
+### 定量风险分析技术
+```
+1、模拟  
+   蒙特卡洛分析： 基于概率分布，随机抽样原理，进行多次模拟计算，以得到项目目标（工期、风险、成本、收益）的概率分布。
+2、敏感性分析：（龙卷风图）
+   快速识别对项目影响最大的风险因素。
+3、决策树分析：EMV（Expected Monetary Value）预期货币价值
+4、影响图： 
+```
+<img width="500px" alt="image" src="https://github.com/user-attachments/assets/62bf2a64-e4d3-4385-a0b7-638eaaa32a86">
+<img width="500px" alt="image" src="https://github.com/user-attachments/assets/a5a523a9-2439-4b22-8878-7e2a2df7ecb2">
+<img width="500px" alt="image" src="https://github.com/user-attachments/assets/949a5f2b-4b8b-4253-ae6e-c2cda15aafb7">
+<img width="500px" alt="image" src="https://github.com/user-attachments/assets/3812c5a4-18b7-43d5-a38c-716d4df4e2ab">
+
 
 ## 风险相关文件
 ```
