--- a/进度.md
+++ b/进度.md
@@ -1,12 +1,17 @@
-## 资源平衡
+## 工具与技术
 ```
-主要目的是为了确保在项目整个执行过程中，资源需求与供应达到相对平衡的状态，减少资源的过度分配的加班，避免资源的闲置和浪费。提高资源的使用效率。
-往往资源平衡会导致关键路径的改变。
+资源平衡
+  主要目的是为了确保在项目整个执行过程中，资源需求与供应达到相对平衡的状态，减少资源的过度分配的加班，避免资源的闲置和浪费。提高资源的使用效率。
+  往往资源平衡会导致关键路径的改变。
+资源平滑
+  也是为了提高资源的使用效率，但是不会改变关键路径。调整非关键路径上的活动来提高资源使用效率。
+快速跟进
+  1、项目进度滞后、活动之间可以并行开展的情况，例如，软件开发中，需求分析、设计阶段可以同时开展部分模块的代码开发。
+  2、虽然项目紧迫，但是对风险有一定成熟能力。也可以考虑快速跟进。
+赶工
+  1、关键路径上出现延误，需要尽快缩短工期的情况。
+  2、有额外资源可以使用，成本增加在可接受范围内。
+  3、没有可以并行执行的活动，且交付完成时间提前的变更已经批准。
 ```
-<img width="628" alt="image" src="https://github.com/user-attachments/assets/007c8d2d-1368-454c-af88-7c839e5f3381">
-
-## 资源平滑
-```
-也是为了提高资源的使用效率，但是不会改变关键路径。调整非关键路径上的活动来提高资源使用效率。
-```
-<img width="571" alt="image" src="https://github.com/user-attachments/assets/0a91320d-881b-4a59-b9cd-0709b67a36db">
+<img width="500" alt="image" src="https://github.com/user-attachments/assets/007c8d2d-1368-454c-af88-7c839e5f3381">
+<img width="500" alt="image" src="https://github.com/user-attachments/assets/0a91320d-881b-4a59-b9cd-0709b67a36db">
