--- a/整合.md
+++ b/整合.md
@@ -17,6 +17,6 @@
 ```
 
 ## 工具与技术
-挣值分析 
+挣值分析 EVM
 
 <img width="1343" alt="image" src="https://github.com/user-attachments/assets/24101f15-6dce-462f-8d93-00616b2968b5">
