--- a/相关方.md
+++ b/相关方.md
@@ -1,4 +1,13 @@
-# 相关方
+# 子过程
+启动
+   13.1 识别相关方
+计划
+   13.2 规划相关方参与
+执行
+   13.3 管理相关方参与
+监控
+   13.4 监督相关方参与
+# 相关文件
 ```
 1、相关方登记册
    1、相关方基本信息，姓名、联系方式、邮件
@@ -11,4 +20,6 @@
    4、相关方参与度
       参与阶段：有些相关方全程参与，有些相关方只在特定时间参与。
       参与方式：会议、提供反馈、审批决策等。
+2、 相关方参与计划
+   
 ```
