--- a/相关方.md
+++ b/相关方.md
@@ -4,6 +4,7 @@
    13.1 识别相关方
 计划
    13.2 规划相关方参与
+      TT ： 相关方参与度评估矩阵
 执行
    13.3 管理相关方参与
 监控
@@ -25,5 +26,18 @@
       参与阶段：有些相关方全程参与，有些相关方只在特定时间参与。
       参与方式：会议、提供反馈、审批决策等。
 2、 相关方参与计划
-   
+   内容：
+      1、相关方识别：明确相关方角色、利益、影响力
+      2、相关方分析：评估相关方对项目的支持程度、影响力、利益诉求、潜在风险。然后将相关方分为不同的类别：
+            如关键相关方、支持相关方、中立相关方、反对相关方 。（相关方参与度评估矩阵）
+      3、参与策略： 不同类别相关方制定不同的策略。参与策略可以包括沟通方式、沟通频率、参与程度、信息共享方式等。
+            如：关键相关方采取定期会议、一对一沟通、提供详细的项目报告。
+                反对相关方，采取主动沟通、解决问题、寻求妥协等方式，减少他们的阻力。
+      4、沟通计划：制定详细的沟通计划、明确每个相关方的沟通方式、沟通内容、沟通频率、责任人。
+                  沟通计划可以包括项目进度报告、会议纪要、电子邮件、电话沟通。
+                  确保信息准确、及时、有效的传递给相关方。
+      5、问题管理：建立问题机制、及时识别和解决与相关方有关的问题。
+                 问题管理可以包括问题的记录、分类、分配、跟踪、解决等环节。
+                 确保问题及时处理，避免对项目造成不良影响。
+   如果相关方之间意见不一致，项目可能失败，需要制定相关方参与计划，解决相关方的顾虑。
 ```
