--- a/相关方.md
+++ b/相关方.md
@@ -43,5 +43,6 @@
 ```
 # TT 
 相关方参与度评估矩阵
-![image](https://github.com/user-attachments/assets/b6a888db-9d18-4aa8-80a2-05a010d4adf9)
+<img width="500" alt="image" src="https://github.com/user-attachments/assets/b6a888db-9d18-4aa8-80a2-05a010d4adf9">
+
 
