--- a/沟通.md
+++ b/沟通.md
@@ -18,3 +18,6 @@
   6、沟通升级流程：建立沟通升级流程，当问题无法在当前层面解决时，明确应该向谁汇报，如何汇报。
   
 ```
+
+# 沟通渠道
+在全球项目上，如果一个项目经理启动了本地预言的社交账户，更新项目状态，项目经理应该先审计新的沟通渠道并遵守PMO政策，然后让这些项目经理遵守PMO的沟通政策，然后更新沟通管理计划，包含新的沟通渠道。
