--- a/相关方.md
+++ b/相关方.md
@@ -46,4 +46,6 @@
 
 <img width="500" alt="image" src="https://github.com/user-attachments/assets/b6a888db-9d18-4aa8-80a2-05a010d4adf9">
 
-
+```
+   如果项目延迟，可能会引起相关方不满，要先通知相关方，管理他们的期望。
+```
