--- a/风险.md
+++ b/风险.md
@@ -72,3 +72,7 @@
    风险应对措施的执行情况：评估风险应对的执行效果，包括 已实施的、正在实施的、未实施的风险应对措施等。
    风险管理建议：根据风险绩效评估结果，提出相应的建议，如调整风险应对策略，加强风险监控等。
 ```
+
+```
+   在更新风险登记册前，需要先确定适当的风险应对
+```
