--- a/质量.md
+++ b/质量.md
@@ -1,4 +1,4 @@
-## 质量相关
+# TT
 ```
 1、质量管理计划
    目标：明确项目要达到的质量标准和具体指标。
@@ -10,6 +10,14 @@
       例如，在软件开发中，代码审查、单元测试、集成测试。
    质量保证活动：如培训、审核、过程改进等。如，为提高团队成员的质量意识，组织质量培训课程。
    质量测量指标：衡量项目质量的具体指标。例如，产品合格率、客户满意度等。
+
+2、质量核对单
+   一般为简单的列表形式，质量检查时，逐一对核对单上的项目进行肩擦好，查看是否符合要求。
+
+3、质量测量指标
+   通常以数值、指标、图标、的形式呈现，在项目执行过程中，定期测量和记录，将实际的结果与指标进行对比。根据分析结果，采取相应的改进策略。
+   假如项目中的某些可交付物，不满足事先定义的项目标准，可以查看质量测量指标进行确认。
+
 
 其他：
 如果团队成员因为个人问题，比如为了奖金，进度。没有做质量控制相关的任务。项目经理可以选择让团队成员查阅质量管理计划，
