--- a/范围.md
+++ b/范围.md
@@ -1,5 +1,16 @@
+# 子过程
+```
+计划
+   5.1 规范范围管理
+   5.2 收集需求
+   5.3 定义范围
+   5.4 创建WBS
+监控
+   5.5 确认范围
+   5.6 控制范围
+```
 
-# 范围
+# 工具和技术
 ```
 1、需求跟踪矩阵 （跟踪管理需求的工具）
    内容：包含了需求标识，需求描述，需求来源，需求状态，需求项目阶段，需求相关的任务，需求的相关的测试用例
@@ -7,4 +18,6 @@
       其中的核心作用是“跟踪”。利用需求跟踪矩阵，
       一方面保证所有的原始需求都能有出处，有状态，有责任人，确保所有需求都被实现、被测试；
       另一方面，在产生变更（需求变更、设计变更、代码变更……）的情况下，可以迅速映射到原始需求，并进行变更波及范围影响分析，发现需要修改的需求、设计和测试用例，避免出现变更分析遗漏连锁变化的问题。
+2、JAD研讨会（收集需求的会议）
+   将相关方、用户、开发人员、业务分析师聚集在一起，共同定义和设计软件系统需求。
 ```
