--- a/范围.md
+++ b/范围.md
@@ -18,6 +18,6 @@
       其中的核心作用是“跟踪”。利用需求跟踪矩阵，
       一方面保证所有的原始需求都能有出处，有状态，有责任人，确保所有需求都被实现、被测试；
       另一方面，在产生变更（需求变更、设计变更、代码变更……）的情况下，可以迅速映射到原始需求，并进行变更波及范围影响分析，发现需要修改的需求、设计和测试用例，避免出现变更分析遗漏连锁变化的问题。
-2、JAD研讨会（可以收集需求、完成需求跟尊矩阵）
+2、JAD研讨会（可以收集需求、完成需求跟踪矩阵）
    将相关方、用户、开发人员、业务分析师聚集在一起，共同定义和设计软件系统需求。
 ```
