--- a/相关方.md
+++ b/相关方.md
@@ -41,6 +41,12 @@
                  确保问题及时处理，避免对项目造成不良影响。
    如果相关方之间意见不一致，项目可能失败，需要制定相关方参与计划，解决相关方的顾虑。
 ```
+
+```
+   通过研究报纸文章、确定哪些团体可能影响项目是在识别相关方。
+```
+
+
 # TT 
 相关方参与度评估矩阵   
 
