--- a/相关方.md
+++ b/相关方.md
@@ -44,14 +44,17 @@
 
 ```
    通过研究报纸文章、确定哪些团体可能影响项目是在识别相关方。
+   如果项目延迟，可能会引起相关方不满，要先通知相关方，管理他们的期望。
 ```
 
 
 # TT 
-相关方参与度评估矩阵   
+1、相关方参与度评估矩阵   
 
 <img width="500" alt="image" src="https://github.com/user-attachments/assets/b6a888db-9d18-4aa8-80a2-05a010d4adf9">
 
-```
-   如果项目延迟，可能会引起相关方不满，要先通知相关方，管理他们的期望。
-```
+2、相关方凸显模型
+
+![image](https://github.com/user-attachments/assets/99084049-1bdf-4be8-bb27-f1f4b74b069a)
+
+
