--- a/相关方.md
+++ b/相关方.md
@@ -55,7 +55,7 @@
 
 <img width="500" alt="image" src="https://github.com/user-attachments/assets/b6a888db-9d18-4aa8-80a2-05a010d4adf9">
 
-2、相关方凸显模型
+2、凸显模型  适用于庞大复杂的的大型社区
 
 ![image](https://github.com/user-attachments/assets/99084049-1bdf-4be8-bb27-f1f4b74b069a)
 
