--- a/进度.md
+++ b/进度.md
@@ -12,6 +12,11 @@
   1、关键路径上出现延误，需要尽快缩短工期的情况。
   2、有额外资源可以使用，成本增加在可接受范围内。
   3、没有可以并行执行的活动，且交付完成时间提前的变更已经批准。
+自下而上估算
+  将项目分解成详细的工作包或活动，然后有负责该工作的人员进行估算，最后将估算的结果汇总起来，得到项目总体的估算。
+三点估算
+  确定最乐观的估算O、最悲观的估算P、最可能的估算M 。然后期望事件TE = ( O + 4M + P ) / 6
+
 ```
 <img width="500" alt="image" src="https://github.com/user-attachments/assets/007c8d2d-1368-454c-af88-7c839e5f3381">
 <img width="500" alt="image" src="https://github.com/user-attachments/assets/0a91320d-881b-4a59-b9cd-0709b67a36db">
