--- a/资源.md
+++ b/资源.md
@@ -1,8 +1,26 @@
-## 工具与技术
+# 子过程
+```
+计划
+  9.1 规划资源管理
+  9.2 估算活动资源
+执行
+  9.3 获取资源
+  9.4 建设团队
+  9.5 管理团队
+监控
+  9.6 控制资源
+```
+
+# 工具与技术
 ```
 1、资源日历（用于规划和记录项目资源可用性的工具）
   资源类型：人力、设备、材料
   资源可用性：每个资源在特定时间内的可用性状态。
     例如，人力资源会标明某个员工在特定时间内是否用于项目工作，是全职还是兼职还是休假状态
     对于设备资源，会标明是否可用，是否维护，是否预定。
+2、RAM （责任分配矩阵）
+  明确每个活动具体的责任人。
+3、RACI （负责、批准、咨询、知情）
+  明确每个活动每个人的职责，是负责、执行、咨询、还是知情。可以明确每个人的职责，避免职责不清导致的工作冲突、重复、遗漏。
+  例如 内部外部资源发生冲突，可以使用RACI。
 ```
