--- a/敏捷.md
+++ b/敏捷.md
@@ -29,7 +29,10 @@ scrum待办事项
    已完成工作的趋势，横轴时间，纵轴已完成工作量。
 4、任务板
    包含几列，代表todo，doing，done，每个任务用卡片表示，任务描述、负责人、预计完成时间。
-   开发团队也可以通过任务板来整理工作+将剩余工作可视化。
+   开发团队也可以通过任务板来 整理工作、将剩余工作可视化。
 5、看板
-   包含几列，todo，doing，done，可以设置限制在置评（WIP）数量
+   包含几列，todo，doing，done，可以设置限制在制品（WIP）数量
+   注重工作流程优化、跨职能团队协作、活着需要简单直观的任务管理工具
+6、scrum 板
+   项目强调scrum方法、强调迭代开发、强调自组织 
 ```
