--- a/风险.md
+++ b/风险.md
@@ -47,6 +47,7 @@
    风险应对措施：针对每个风险制定具体的应对策略，如规避、减轻、转移或接受等。
       例如，对于技术难题风险，可以采取增加技术专家支持、进行技术预研等措施减轻风险。
    风险状态：记录风险的当前状态，发生、已发生、已解决。
+   在更新风险登记册前，需要先确定适当的风险应对
    
 3、风险分解结构 （Risk Breakdown Structure RBS，将项目风险按照一定的层次结构进行分类和分解的工具）
    风险类别：将项目风险划分为不同的类别，技术风险、市场风险、管理风险。
