--- a/风险.md
+++ b/风险.md
@@ -28,7 +28,19 @@
    2、敏感性分析：（龙卷风图）
       快速识别对项目影响最大的风险因素。
    3、决策树分析：EMV（Expected Monetary Value）预期货币价值
-   4、影响图： 
+   4、影响图：
+威胁应对策略
+   1、上报
+   2、规避
+   3、转移
+   4、减轻
+   5、接受
+机会应对策略
+   1、上报
+   2、开拓
+   3、分享
+   4、提高
+   5、接受
 ```
 
 
