--- a/整合.md
+++ b/整合.md
@@ -17,6 +17,11 @@
 ```
 
 ## 工具与技术
-挣值分析 EVM
+```
+1、挣值分析 EVM
+2、专家判断：
+  如果还有待完成的交付物，此时收尾，项目经理可以使用专家判断。
+```
+
 
 <img width="1343" alt="image" src="https://github.com/user-attachments/assets/24101f15-6dce-462f-8d93-00616b2968b5">
