--- a/整合.md
+++ b/整合.md
@@ -19,6 +19,9 @@
 ## 工具与技术
 ```
 1、挣值分析 EVM
+  趋势分析 EAC/ETC/TCPI
+  偏差分析 SV/CV/SPI/CPI
+  挣值分析 EV/PV/AC
 2、专家判断：
   如果还有待完成的交付物，此时收尾，项目经理可以使用专家判断。
 ```
