--- a/质量.md
+++ b/质量.md
@@ -1,3 +1,12 @@
+# 子过程
+```
+计划
+   8.1 规划只阿令管理
+执行
+   8.2 管理质量
+监控
+   8.3 控制质量
+```
 # TT
 ```
 1、质量管理计划
@@ -18,8 +27,9 @@
    通常以数值、指标、图标、的形式呈现，在项目执行过程中，定期测量和记录，将实际的结果与指标进行对比。根据分析结果，采取相应的改进策略。
    假如项目中的某些可交付物，不满足事先定义的项目标准，可以查看质量测量指标进行确认。
 
+4、进行测试
+   在 IT 领域中，可以进行测试，来避免可交付成果不符合验收标准清单中的几项内容。
 
 其他：
-如果团队成员因为个人问题，比如为了奖金，进度。没有做质量控制相关的任务。项目经理可以选择让团队成员查阅质量管理计划，
-并且上报给项目发起人该团队成员的道德问题。
+如果团队成员因为个人问题，比如为了奖金，进度。没有做质量控制相关的任务。项目经理可以选择让团队成员查阅质量管理计划，并且上报给项目发起人该团队成员的道德问题。
 ```
