--- a/5、范围.md
+++ b/5、范围.md
@@ -21,3 +21,7 @@
 2、JAD研讨会（可以收集需求、完成需求跟踪矩阵）
    将相关方、用户、开发人员、业务分析师聚集在一起，共同定义和设计软件系统需求。
 ```
+
+```
+   如果不清楚可交付物是否满足客户的需求，可以参考需求跟踪矩阵，需求跟踪矩阵描述需求与交付物的关系。
+```
