--- a/4、整合.md
+++ b/4、整合.md
@@ -56,7 +56,7 @@
    4、项目进度滞后
    5、项目超出预算，需要管理储备
 三、利益相关者的要求
-   1、客户需求的变化
+   1、客户需求的变化（不管供应商的需求是否完成、是否交付、如果甲方觉得不满足要求而拒收，就要变更）
    2、项目发起人的要求
    3、团队成员的建议
 ```
