--- a/4、整合.md
+++ b/4、整合.md
@@ -61,6 +61,14 @@
    3、团队成员的建议
 ```
 
+# 商业论证
+```
+项目启动阶段，制定项目章程时进行。项目目标、可行性、解决方案、边界、成本、效益、风险、计划、时间表、利益相关者、结论。
+
+例如项目发起人和项目经理正在为新的能源厂制定项目章程。有多个厂址可供考虑，但可能影响项目成本。若要选择最合适的厂址，
+项目发起人和项目经理必须首先执行下列哪一项工作？商业论证
+```
+
 # 工具与技术
 ```
 1、挣值分析 EVM
