--- a/11、风险.md
+++ b/11、风险.md
@@ -76,6 +76,8 @@
 
 ```
    在更新风险登记册前，需要先确定适当的风险应对
+   如果风险未发生，需要先识别风险、然后定性、定量、规划风险应对、实施风险应对
+   如果风险已发生了，需要先审查风险的影响
 ```
 <img width="500px" alt="image" src="https://github.com/user-attachments/assets/49ef22ae-d1fb-4e58-9c20-62d3ee84c867">
 <img width="500px" alt="image" src="https://github.com/user-attachments/assets/4c6a97ea-ce58-4428-bc05-aa0857f20bf8">
