--- a/11、风险.md
+++ b/11、风险.md
@@ -32,10 +32,12 @@
 威胁应对策略
    1、上报
    2、规避
+      改方案、放弃项目
    3、转移
       外包、保险
    4、减轻
    5、接受
+      风险概率低 影响小/大都可以接受
 机会应对策略
    1、上报
    2、开拓
