--- a/11、风险.md
+++ b/11、风险.md
@@ -37,7 +37,8 @@
       外包、保险
    4、减轻
    5、接受
-      风险概率低 影响小/大都可以接受
+      风险概率低 影响小
+      风险概率小 影响大，如果公司准备了储备金，可以承担成本，可以选择接受
 机会应对策略
    1、上报
    2、开拓
