Update and rename 资源.md to 9、资源.md

--- a/9、资源.md
+++ b/9、资源.md
@@ -24,3 +24,7 @@
   明确每个活动每个人的职责，是负责、执行、咨询、还是知情。可以明确每个人的职责，避免职责不清导致的工作冲突、重复、遗漏。
   例如 内部外部资源发生冲突，可以使用RACI。
 ```
+
+```
+  高级工程师（资源）被占用，首先尝试与职能部门经理沟通谈判让出资源。
+```
