--- a/4、整合.md
+++ b/4、整合.md
@@ -1,5 +1,4 @@
-# 整合
-## 子过程
+# 子过程
 ```
 启动
   4.1 制定项目章程
@@ -68,6 +67,10 @@
 
 例如项目发起人和项目经理正在为新的能源厂制定项目章程。有多个厂址可供考虑，但可能影响项目成本。若要选择最合适的厂址，
 项目发起人和项目经理必须首先执行下列哪一项工作？商业论证
+```
+
+```
+  开工会议中，开工会议后，所有变更都需要走变更流程
 ```
 
 # 工具与技术
