--- a/11、风险.md
+++ b/11、风险.md
@@ -24,7 +24,9 @@
    1、概率和影响矩阵
 定量风险分析技术
    1、模拟  
-      蒙特卡洛分析： 基于概率分布，随机抽样原理，进行多次模拟计算，以得到项目目标（工期、风险、成本、收益）的概率分布。
+      蒙特卡洛分析：
+         基于概率分布，随机抽样原理，进行多次模拟计算，以得到项目目标（工期、风险、成本、收益）的概率分布。
+         不太适用于有法规快速变化的情况。
    2、敏感性分析：（龙卷风图）
       快速识别对项目影响最大的风险因素。
    3、决策树分析：EMV（Expected Monetary Value）预期货币价值
