--- a/7、成本.md
+++ b/7、成本.md
@@ -9,8 +9,38 @@
 ```
 # 成本类型
 ```
-  预防成本： 培训
-  评估成本： 测试、检查、破坏性试验
-  内部失败成本： 内部发现的返工
-  外部失败成本： 外部发现的返工
+  一、一致性成本：
+    1、预防成本：
+        为了防止出现质量问题而进行的活动所产生的成本。
+        例如：制定质量计划、制定培训、开展质量审计活动。
+    2、评估成本：
+        为了评价项目质量是否符合要求而进行的活动产生的成本。
+        例如：测试、检查、破坏性试验
+  二、非一致性成本：
+    1、内部失败成本：
+        内部发现的返工
+    2、外部失败成本：
+        由于质量问题给客户或其他相关方带来损失产生的成本。
+        例如：外部发现质量问题返工的费用、客户投诉处理费用、产品召回费用、法律诉讼费用。
+  三、直接成本与间接成本：
+    1、直接成本
+      直接与项目生产或服务相关产生的成本，可以追溯到项目上。
+      例如：团队成员工资、原材料费用、设备租赁费用等。
+    2、间接成本
+      不直接与项目生产或服务相关，但为了支持项目进行必须发生的成本。间接成本不能直接追溯到特定的项目上，而是需要一定的分配方法分摊到项目上。
+      例如：管理人员的工资、办公费用、水电费。
+  四、固定成本和可变成本。
+    1、固定成本
+      在一定业务量范围内，不随着业务变化而变化的成本。
+      例如：设备的购置费用、场地的租赁费用。
+    2、可变成本
+      随着业务发展变化的成本。
+      例如：原材料费用、直接人工费用。例如生产的产品数量越多，原材料越多、直接人工费用越高。
+  五、机会成本
+    由于选择了一个项目放弃了其他项目或机会带来的潜在收益的损失。
+    例如：项目有两个项目可以选择，选择项目A放弃项目B。如果项目B预期200w，200w就是选择项目A的机会成本。
+  六、沉没成本
+    已经发生且无法收回的成本
+    例如：在项目进行过程中，已经投入的资金、时间和精力等。
+         成员1工作后离职，成员2覆盖了原有设计，成员1就是沉没成本。
 ```
