--- a/敏捷.md
+++ b/敏捷.md
@@ -19,6 +19,8 @@ scrum待办事项
 产品负责人
    确保工作按照领导层的指示方向和产品愿景展开
    了解到新的需求时，将需求添加到产品待办事项列表中
+Scrum主管
+   传播敏捷，无论直接参与哪个团队工作，都应该帮助公司采用敏捷方法。
 ```
 # 敏捷中的可视化工具
 ```
