--- a/7、成本.md
+++ b/7、成本.md
@@ -44,3 +44,11 @@
     例如：在项目进行过程中，已经投入的资金、时间和精力等。
          成员1工作后离职，成员2覆盖了原有设计，成员1就是沉没成本。
 ```
+
+# TT
+```
+1、类比估算
+  比较当前项目与历史类似项目，估算当前项目成本、工期或其他参数。
+2、参数估算
+  通过已知项目成本或工期的关键参数，如统计值、工作量、生产效率等，已知的项目参数来估算成本或工期。
+```
