--- a/沟通.md
+++ b/沟通.md
@@ -9,14 +9,17 @@
 ```
 # 相关文件
 ```
-1、沟通管理计划
-  1、沟通需求分析： 确定利益相关者信息需求，需要什么信息、什么时候需要、什么方式接收等。访谈、问卷调查的方式。
-  2、沟通技术：电子邮件、即时通讯、会议、报告。需要考虑项目的规模、复杂度、地理位置的因素，选择合适的沟通方式。
-  3、沟通频率：每天、每周、每月。更具项目阶段和重要性，调整沟通频率。
-  4、沟通责任人：明确谁负责与特定利益相关者沟通。确保每个利益相关者都有明确的沟通联系人，以便及时的解决问题。
-  5、沟通渠道：确定沟通的渠道，报告、会议、非正式讨论。确保沟通顺畅，能哦股及时传递。
-  6、沟通升级流程：建立沟通升级流程，当问题无法在当前层面解决时，明确应该向谁汇报，如何汇报。
-  
+1、沟通管理计划 （侧重于项目信息的收集、存储、发送的方式和频率）
+  内容
+    1、沟通需求分析： 确定利益相关者信息需求，需要什么信息、什么时候需要、什么方式接收等。访谈、问卷调查的方式。
+    2、沟通技术：电子邮件、即时通讯、会议、报告。需要考虑项目的规模、复杂度、地理位置的因素，选择合适的沟通方式。
+    3、沟通频率：每天、每周、每月。更具项目阶段和重要性，调整沟通频率。
+    4、沟通责任人：明确谁负责与特定利益相关者沟通。确保每个利益相关者都有明确的沟通联系人，以便及时的解决问题。
+    5、沟通渠道：确定沟通的渠道，报告、会议、非正式讨论。确保沟通顺畅，能哦股及时传递。
+    6、沟通升级流程：建立沟通升级流程，当问题无法在当前层面解决时，明确应该向谁汇报，如何汇报。
+  例如
+    一些商店业主请求提供每周项目进度报告，需要更新沟通管理计划
+    相关方参与计划更侧重于管理相关方的参与程度与方式
 ```
 
 # 沟通渠道
