--- a/13、相关方.md
+++ b/13、相关方.md
@@ -27,7 +27,7 @@
    4、相关方参与度
       参与阶段：有些相关方全程参与，有些相关方只在特定时间参与。
       参与方式：会议、提供反馈、审批决策等。
-2、 相关方参与计划
+2、 相关方参与计划（侧重于管理相关方的参与程度与方式）
    内容：
       1、相关方识别：明确相关方角色、利益、影响力
       2、相关方分析：评估相关方对项目的支持程度、影响力、利益诉求、潜在风险。然后将相关方分为不同的类别：
