--- a/4、整合.md
+++ b/4、整合.md
@@ -64,6 +64,7 @@
 ```
 项目启动阶段，制定项目章程前需要进行商业论证。项目目标、可行性、解决方案、边界、成本、效益、风险、计划、时间表、利益相关者、结论。
 在项目执行、收尾期间如果相关方对项目成功的标准不一致、不确定。可以参考项目章程、项目成功的标准在项目章程里。
+项目发起人对项目章程有关键的决策权，对项目章程进行审批。
 
 例如项目发起人和项目经理正在为新的能源厂制定项目章程。有多个厂址可供考虑，但可能影响项目成本。若要选择最合适的厂址，
 项目发起人和项目经理必须首先执行下列哪一项工作？商业论证
