--- a/11、风险.md
+++ b/11、风险.md
@@ -33,14 +33,23 @@
    4、影响图：
 威胁应对策略
    1、上报
+      如果某项威胁不在项目范围内，超出了项目经理的权限，需要上报。被上报的风险在项目集、项目组合层面、或组织的其他部门管理，不在项目层面。
+      对于上报的威胁，相关人员愿意承担相关责任，这一点非常重要。
+         例如：项目集经理改变了风险项目的优先级，导致项目正在严重延期。需要上报给项目发起人。
    2、规避
-      改方案、放弃项目
+      通常用于发生概率高、具有严重负面影响的风险。
+         改方案、放弃项目、消除威胁的原因、延长进度计划、改变项目策略、缩小范围。
    3、转移
-      外包、保险
+      将责任转移给第三方。
+         外包、保险、担保书。
    4、减轻
+      指通过采取措施。减轻风险出现的概率和影响
+         多次测试、选择更可靠的卖方。
    5、接受
-      风险概率低 影响小
-      风险概率小 影响大，如果公司准备了储备金，可以承担成本，可以选择接受
+      承认风险存在，但不主动采取措施。一般用于低优先级的风险。
+         主动：建立应急储备、预留时间、资金。
+         被动：不主动采取行动，知识定期对威胁审查。
+      
 机会应对策略
    1、上报
    2、开拓
