--- a/5、范围.md
+++ b/5、范围.md
@@ -4,7 +4,16 @@
    5.1 规范范围管理
    5.2 收集需求
    5.3 定义范围
+      TT：1、专家判断
+          2、数据分析
+          3、决策
+            多标准决策分析
+          4、人就关系与团队技能
+            引导
+          5、产品分析
+      输出：项目范围说明书
    5.4 创建WBS
+      输入：
       TT：1、专家判断
           2、分解
       输出：范围基准
