--- a/5、范围.md
+++ b/5、范围.md
@@ -3,19 +3,14 @@
 计划
    5.1 规范范围管理
    5.2 收集需求
+      TT：1、专家判断 2、数据收集：（头脑风暴、访谈、标杆对照、问卷调查、焦点小组）3、数据分析 4、决策 5、数据表现（亲和图、思维导图） 6、人际关系与团队技能 7、系统交互图 8、原型法
+      输出：1、需求文件 2、需求跟踪矩阵
    5.3 定义范围
-      TT：1、专家判断
-          2、数据分析
-          3、决策
-            多标准决策分析
-          4、人就关系与团队技能
-            引导
-          5、产品分析
+      TT：1、专家判断 2、数据分析 3、决策 多标准决策分析 4、人就关系与团队技能 引导 5、产品分析
       输出：项目范围说明书
    5.4 创建WBS
-      输入：项目范围说明书
-      TT： 1、专家判断
-          2、分解
+      输入： 项目范围说明书
+      TT： 1、专家判断 2、分解
       输出：范围基准
 监控
    5.5 确认范围
