Update and rename 质量.md to 8、质量.md

--- a/8、质量.md
+++ b/8、质量.md
@@ -29,7 +29,17 @@
 
 4、进行测试
    在 IT 领域中，可以进行测试，来避免可交付成果不符合验收标准清单中的几项内容。
+5、六西格玛
+   是一种质量管理方法，通过系统的方法和工具、不断改进过程。在实施六西格玛时，需要领导的承诺与支持，员工的培训和教育，以及持续的改进和文化的变革。
+   DMAIC流程
+      定义 Define
+      测量 Measure
+      分析 Analyze
+      改进 Improve
+      控制 Control
+```
 
+```
 其他：
 如果团队成员因为个人问题，比如为了奖金，进度。没有做质量控制相关的任务。项目经理可以选择让团队成员查阅质量管理计划，并且上报给项目发起人该团队成员的道德问题。
 ```
