--- a/8、质量.md
+++ b/8、质量.md
@@ -29,14 +29,26 @@
 
 4、进行测试
    在 IT 领域中，可以进行测试，来避免可交付成果不符合验收标准清单中的几项内容。
-5、六西格玛
-   是一种质量管理方法，通过系统的方法和工具、不断改进过程。在实施六西格玛时，需要领导的承诺与支持，员工的培训和教育，以及持续的改进和文化的变革。
-   DMAIC流程
-      定义 Define
-      测量 Measure
-      分析 Analyze
-      改进 Improve
-      控制 Control
+5、管理质量的方法
+   1、六西格玛
+      是一种质量管理方法，通过系统的方法和工具、不断改进过程。在实施六西格玛时，需要领导的承诺与支持，员工的培训和教育，以及持续的改进和文化的变革。
+      DMAIC流程
+         定义 Define
+         测量 Measure
+         分析 Analyze
+         改进 Improve
+         控制 Control
+   2、审计
+   3、面向X的设计（Design for X）
+      X代表多种因素，常见的有面向制造的设计（Design for Manufacture，DFM）、面向装配的设计（Design for Assembly，DFA）、面向可靠性的设计（Design for Reliability，DFR）等。
+      1、面向制造的设计（DFM）
+         DFM 旨在使产品设计在满足功能和性能要求的同时，最大程度地优化制造过程，降低制造成本，提高生产效率和产品质量。
+      2、面向装配的设计（DFA）
+         DFA 着重于使产品的装配过程更加简单、高效、可靠，降低装配成本和时间，提高装配质量。
+      3、面向可靠性的设计（DFR）
+         DFR 以提高产品的可靠性为目标，在设计阶段就考虑产品在各种使用环境和条件下的可靠性要求，通过设计优化和可靠性分析，确保产品能够在规定的寿命期内可靠地工作
+   4、根本原因分析
+      发现一个严重问题要先分析原因，适合根本原因分析
 ```
 
 ```
