--- a/4、整合.md
+++ b/4、整合.md
@@ -80,6 +80,8 @@
   趋势分析 EAC/ETC/TCPI
   偏差分析 SV/CV/SPI/CPI
   挣值分析 EV/PV/AC
+
+  如果项目中，要变更材料，为保证成本基准不受影响，要先分析影响（比如审查EVM），再考虑其他措施
 2、专家判断：
   如果还有待完成的交付物，此时收尾，项目经理可以使用专家判断。
 ```
