--- a/8、质量.md
+++ b/8、质量.md
@@ -38,6 +38,7 @@
          分析 Analyze
          改进 Improve
          控制 Control
+      定义、测量、分析、改进和控制这五个阶段是一个循环递进的过程。在每个阶段完成后，根据结果进行调整和优化，然后进入下一个阶段，不断重复这个过程以实现持续改进，具有明显的迭代特征。
    2、审计
    3、面向X的设计（Design for X）
       X代表多种因素，常见的有面向制造的设计（Design for Manufacture，DFM）、面向装配的设计（Design for Assembly，DFA）、面向可靠性的设计（Design for Reliability，DFR）等。
