--- a/敏捷.md
+++ b/敏捷.md
@@ -40,6 +40,18 @@ Scrum主管
    项目强调scrum方法、强调迭代开发、强调自组织 
 ```
 
+# 迭代的方法
+```
+1、六西格玛 DMAIC 流程 定义（Define）、测量（Measure）、分析（Analyze）、改进（Improve）、控制（Control）
+2、PDCA（计划、执行、检查、行动）。
+3、敏捷方法
+3、精益生产方法
+   1、价值流分析（Value Stream Mapping）
+   2、5S 管理：整理（Seiri）、整顿（Seiton）、清扫（Seiso）、清洁（Seiketsu）、素养（Shitsuke），通过改善工作环境和工作习惯，提高工作效率和质量。
+   3、看板管理（Kanban）：一种可视化的管理工具，用于控制生产和物流过程，实现准时化生产。
+   4、持续改善（Kaizen）：鼓励员工不断提出小的改进建议，逐步实现流程的优化和提升。
+```
+
 ```
    在大型项目中，如果有多个团队处理项目，使用同一个产品待办列表，扩展整理范围，并考虑在产品待办列表中提供不同团队的视图。
    敏捷实践 使用产品列表、产品增量将工作划分为多个版本。
