--- a/8、质量.md
+++ b/8、质量.md
@@ -1,11 +1,14 @@
 # 子过程
 ```
 计划
-   8.1 规划只阿令管理
+   8.1 规划质量管理
 执行
    8.2 管理质量
 监控
    8.3 控制质量
+      输入：可交付成果
+      TT ：1、统计抽样 2、核查表 3、测试
+      输出：1、核实的可交付成果 2、质量控制测量结果
 ```
 # TT
 ```
