--- a/8、质量.md
+++ b/8、质量.md
@@ -2,13 +2,15 @@
 ```
 计划
    8.1 规划质量管理
+      TT： 质量成本
+      输出：1、质量测量指标 2、质量管理计划
 执行
-   8.2 管理质量
+   8.2 管理质量（过程怎么管）
       输入：质量管理计划
       TT： 详见下方 5、管理质量的方法
-      输出： 质量报告
+      输出： 1、质量报告 2、测试与评估文件
 监控
-   8.3 控制质量
+   8.3 控制质量（结果怎么测）
       输入：可交付成果
       TT ：1、统计抽样 2、核查表 3、测试
       输出：1、核实的可交付成果 2、质量控制测量结果
