--- a/敏捷.md
+++ b/敏捷.md
@@ -51,6 +51,12 @@ Scrum主管
    3、看板管理（Kanban）：一种可视化的管理工具，用于控制生产和物流过程，实现准时化生产。
    4、持续改善（Kaizen）：鼓励员工不断提出小的改进建议，逐步实现流程的优化和提升。
 ```
+# 相关会议
+```
+每日站会：
+   PO、SM、开发团队参加，如果时间太长，可以仅仅开发团队参加，Scrum选择参加，敏捷中团队自组织。
+
+```
 
 ```
    在大型项目中，如果有多个团队处理项目，使用同一个产品待办列表，扩展整理范围，并考虑在产品待办列表中提供不同团队的视图。
