--- a/9、资源.md
+++ b/9、资源.md
@@ -23,6 +23,8 @@
 3、RACI （负责、批准、咨询、知情）
   明确每个活动每个人的职责，是负责、执行、咨询、还是知情。可以明确每个人的职责，避免职责不清导致的工作冲突、重复、遗漏。
   例如 内部外部资源发生冲突，可以使用RACI。
+4、项目组织图
+  以图形的方式展示项目团队成员及其报告关系。
 ```
 
 ```
