--- a/12、采购.md
+++ b/12、采购.md
@@ -11,4 +11,30 @@
 ```
 独立估算
   独立于项目团队之外的专业人士或机构对项目成本、进度、资源进行估算。这些独立估算者有专业知识和丰富的经验，能客观公正的对项目进行评估。
+  收到供应商的建议书后，可以使用独立估算确保最低报价在市场范围内。让专业的人吧市场上报价算清楚。
+```
+
+# 合同
+```
+总价类合同 （适合不出现重大范围变更的情况下使用）
+  固定总价类合同（FFP） 价格确定后不再变
+  总价加激励费合同（FPIP）
+    允许绩效偏离，如果目标实现，给予奖励。
+    会设置价格上限，高于价格上限的全部成本由卖方承担。
+  总价加经济价格调整合同（FPEPA）
+    卖方履约时间跨越几年，或以不同货币支付价款。比如应对通货膨胀。
+    适用于持续时间长的项目，允许根据条件变化调整合同。
+成本补偿类合同（适合容易出现重大范围变更的情况下使用）
+  成本加固定费用合同（CPAF）
+    为卖方报销成本（合同工作中一切可列支成本）
+    项目初始阶段，会支付一笔固定费用，百分比。
+  成本加激励费用合同（CPIF）
+    为卖方报销成本（合同工作中一切可列支成本）
+    项目达到绩效目标，支付激励费用
+  成本加奖励费用合同（CPFF）
+    为卖方报销成本（合同工作中一切可列支成本）
+    甲方主管认为绩效目标达到要求，才会支付奖励费用
+混合类合同
+  工料合同
+    无法快速编制出准确的工作说明书的情况下，扩充人员、聘请专家、寻求外部支持使用工料合同。
 ```
