--- a/13、相关方.md
+++ b/13、相关方.md
@@ -48,6 +48,7 @@
    通过研究报纸文章、确定哪些团体可能影响项目是在识别相关方。
    如果项目延迟，可能会引起相关方不满，要先通知相关方，管理他们的期望。
    如果高级经理很少参与项目、并且抱怨项目延期，项目经理需要控制相关方参与程度。
+   如果相关方参与度评估矩阵识别到一个反对项目且有影响力的相关方，需要先识别相关方。
 ```
 
 
