--- a/11、风险.md
+++ b/11、风险.md
@@ -7,7 +7,7 @@
          O：风险登记册
    11.3 实施定性风险分析 （风险分级、分类）
          TT ：概率和影响矩阵
-         O：O：风险登记册 （加列，如风险级别高中低）
+         O：O：风险登记册 （加列，如风险级别高中低，影响的大小）
    11.4 实施定量风险分析
    11.5 规划风险应对
 执行过程组
