--- a/9、资源.md
+++ b/9、资源.md
@@ -27,6 +27,19 @@
   以图形的方式展示项目团队成员及其报告关系。
 ```
 
+# 塔克曼阶梯理论
+```
+形成阶段
+  成员之间相互认识，相互独立，不会坦诚布公。
+震荡阶段
+  相互对立，凝聚力差
+规范阶段
+  学习相互信任，协同工作
+成熟阶段
+  互相依靠，坦诚相待，充满信心
+解散阶段
+```
+
 ```
   高级工程师（资源）被占用，首先尝试与职能部门经理沟通谈判让出资源。
 ```
