--- a/9、资源.md
+++ b/9、资源.md
@@ -11,6 +11,21 @@
   9.6 控制资源
 ```
 
+# 文件
+```
+1、资源管理计划
+  识别资源：如何识别和量化团队所需资源的方法。
+  获取资源：如何获取资源的指南。
+  角色与职责
+    角色、职权、职责、能力
+  项目组织图：以图形的方式展示项目团队成员及其报告关系。
+  项目资源管理：如何定义、配备、管理、最终遣散资源的方法。
+  培训：对项目成员的培训策略。
+  团队建设：建设项目团队的方法。
+  认可计划：对团队成员哪些认可奖励，何时给予。
+  资源控制：规定合适的方法，确保合格的实物在资源需要时可用，以及用最优的方式获取实物资源。
+```
+
 # 工具与技术
 ```
 1、资源日历（用于规划和记录项目资源可用性的工具）
