--- a/9、资源.md
+++ b/9、资源.md
@@ -55,6 +55,8 @@
 解散阶段
 ```
 
+# 易错题
 ```
   高级工程师（资源）被占用，首先尝试与职能部门经理沟通谈判让出资源。
+  在制定资源管理计划时，项目涉及不同国家有不同的文化资源，哪一项将帮助项目处理这种情况？B✅ A、团建 B、事业环境因素 C、人际关系技能 D、虚拟团队
 ```
