--- a/13、相关方.md
+++ b/13、相关方.md
@@ -51,6 +51,14 @@
    如果相关方参与度评估矩阵识别到一个反对项目且有影响力的相关方，需要先识别相关方。
 ```
 
+# 知识点
+```
+何时识别相关方
+   1、项目进入生命周期不同阶段；
+   2、当前相关方不再参与项目、或出现新的相关方
+   3、组织内部或更大区域的相关方社区发生重大变化
+```
+
 
 # TT 
 1、相关方参与度评估矩阵   
