--- a/13、相关方.md
+++ b/13、相关方.md
@@ -57,6 +57,11 @@
    1、项目进入生命周期不同阶段；
    2、当前相关方不再参与项目、或出现新的相关方
    3、组织内部或更大区域的相关方社区发生重大变化
+权利利益方格
+   权利高、利益高：重点管理、密切关注
+   权利高、利益低：令其满意
+   权利低、利益高：随时告知
+   权利低、利益低：监督
 ```
 
 
