--- a/9、资源.md
+++ b/9、资源.md
@@ -7,6 +7,7 @@
   9.3 获取资源
   9.4 建设团队
   9.5 管理团队
+    TT ：冲突管理
 监控
   9.6 控制资源
 ```
@@ -40,6 +41,12 @@
   例如 内部外部资源发生冲突，可以使用RACI。
 4、项目组织图
   以图形的方式展示项目团队成员及其报告关系。
+5、冲突管理
+  回避：问题推给别人、将问题推到准备充分的时候、从实际或潜在的冲突中退出。
+  包容：强调一致而非差异、考虑其他方需要，为维持和谐与关系各退一步。
+  妥协：一定程度满意、暂时解决问题或解决一部分问题，容易导致“双输”局面。
+  强迫：牺牲一方，推行一方；只提供 输/赢 方案。通常解决紧急问题。
+  合作：通常会实现“双赢”，综合考虑不同观点意见，使用合作态度、开放式对话达成共识和承诺。
 ```
 
 # 塔克曼阶梯理论
