--- a/敏捷.md
+++ b/敏捷.md
@@ -59,7 +59,9 @@ Scrum主管
 
 ```
 
+# 易错题
 ```
    在大型项目中，如果有多个团队处理项目，使用同一个产品待办列表，扩展整理范围，并考虑在产品待办列表中提供不同团队的视图。
    敏捷实践 使用产品列表、产品增量将工作划分为多个版本。
+   原型设计：能收到关于早期需求的反馈相应的调整设计。
 ```
