--- a/敏捷.md
+++ b/敏捷.md
@@ -64,4 +64,5 @@ Scrum主管
    在大型项目中，如果有多个团队处理项目，使用同一个产品待办列表，扩展整理范围，并考虑在产品待办列表中提供不同团队的视图。
    敏捷实践 使用产品列表、产品增量将工作划分为多个版本。
    原型设计：能收到关于早期需求的反馈相应的调整设计。
+   确定待办事项优先级：团队成员觉得可能有延期的问题，其他团队也依赖这个用户故事，可以找PO重新确定优先级。
 ```
