--- a/12、采购.md
+++ b/12、采购.md
@@ -38,3 +38,8 @@
   工料合同
     无法快速编制出准确的工作说明书的情况下，扩充人员、聘请专家、寻求外部支持使用工料合同。
 ```
+
+# 易错题
+```
+  需求不明确时，如果使用敏捷框架外包项目，可以使用追求 共享风险-回报合同 关系与供应商谈判协议。
+```
