--- a/8、质量.md
+++ b/8、质量.md
@@ -2,7 +2,7 @@
 ```
 计划
    8.1 规划质量管理
-      TT： 质量成本
+      TT： 1、成本效益分析 2、质量成本
       输出：1、质量测量指标 2、质量管理计划
 执行
    8.2 管理质量（过程怎么管）
@@ -58,6 +58,8 @@
          DFR 以提高产品的可靠性为目标，在设计阶段就考虑产品在各种使用环境和条件下的可靠性要求，通过设计优化和可靠性分析，确保产品能够在规定的寿命期内可靠地工作
    4、根本原因分析
       发现一个严重问题要先分析原因，适合根本原因分析
+6、成本效益分析
+   在规划质量管理阶段，通过成本效益分析，可以确定规划的质量活动是否有效的利用了成本。
 ```
 
 ```
