--- a/5、范围.md
+++ b/5、范围.md
@@ -25,10 +25,19 @@
       其中的核心作用是“跟踪”。利用需求跟踪矩阵，
       一方面保证所有的原始需求都能有出处，有状态，有责任人，确保所有需求都被实现、被测试；
       另一方面，在产生变更（需求变更、设计变更、代码变更……）的情况下，可以迅速映射到原始需求，并进行变更波及范围影响分析，发现需要修改的需求、设计和测试用例，避免出现变更分析遗漏连锁变化的问题。
+
 2、JAD研讨会（可以收集需求、完成需求跟踪矩阵）
    将相关方、用户、开发人员、业务分析师聚集在一起，共同定义和设计软件系统需求。
+
+3、德尔菲技术
+   通过将多个专家以匿名、多轮反馈、统计分析的方式就研究的主题达成一致意见的方法。
+
+4、名义小组技术
+   有限时间内收集和整合各种观点，达成共识，作出决策。
+   独立思考、轮流发言、投票排序。
 ```
 
 ```
    如果不清楚可交付物是否满足客户的需求，可以参考需求跟踪矩阵，需求跟踪矩阵描述需求与交付物的关系。
+   项目经理在帮助其他经理提供某个问题的解决方案时，可以使用什么防止任何人对结果产生不适当的影响？ 德尔菲技术，相关专家匿名参与，观点归纳重复几轮，可能会取得一致意见。
 ```
