--- a/进度.md
+++ b/进度.md
@@ -1,3 +1,15 @@
+# 子过程
+```
+计划
+  6.1 规划进度管理
+  6.2 定义活动
+  6.3 排列活动顺序
+  6.4 估算活动持续时间
+  6.5 制定进度计划
+监控
+  6.6 控制进度
+```
+
 ## 工具与技术
 ```
 资源平衡
@@ -16,6 +28,13 @@
   将项目分解成详细的工作包或活动，然后有负责该工作的人员进行估算，最后将估算的结果汇总起来，得到项目总体的估算。
 三点估算
   确定最乐观的估算O、最悲观的估算P、最可能的估算M 。然后期望事件TE = ( O + 4M + P ) / 6
+关键路径分析
+  确定总体项目进度计划的灵活性
+  识别关键路径
+  优化项目资源分配
+    关键路径活动优先分配资源
+  进度控制
+    发现进度偏差采取措施进行调整
 
 ```
 <img width="500" alt="image" src="https://github.com/user-attachments/assets/007c8d2d-1368-454c-af88-7c839e5f3381">
