--- a/敏捷.md
+++ b/敏捷.md
@@ -65,4 +65,5 @@ Scrum主管
    敏捷实践 使用产品列表、产品增量将工作划分为多个版本。
    原型设计：能收到关于早期需求的反馈相应的调整设计。
    确定待办事项优先级：团队成员觉得可能有延期的问题，其他团队也依赖这个用户故事，可以找PO重新确定优先级。
+   管理质量：在敏捷中、较短迭代计划和执行周期，可以通过定期的回顾会议，来管理质量。
 ```
