--- a/5、范围.md
+++ b/5、范围.md
@@ -20,7 +20,7 @@
 # 工具和技术
 ```
 1、需求跟踪矩阵 （跟踪管理需求的工具）
-   内容：包含了需求标识，需求描述，需求来源，需求状态，需求项目阶段，需求相关的任务，需求的相关的测试用例
+   内容：包含了需求标识，需求描述，需求来源，需求状态，需求项目阶段，需求相关的任务，需求的相关的测试用例，需求的属性
    作用：1、确保交付 2、为变更提供框架
       其中的核心作用是“跟踪”。利用需求跟踪矩阵，
       一方面保证所有的原始需求都能有出处，有状态，有责任人，确保所有需求都被实现、被测试；
