--- a/12、采购.md
+++ b/12、采购.md
@@ -1,7 +1,7 @@
 # 子计划
 ```
 计划
-  12.1 规划采购管理
+  12.1 规划采购管理 
 执行
   12.2 实施采购
 监控
@@ -37,6 +37,22 @@
 混合类合同
   工料合同
     无法快速编制出准确的工作说明书的情况下，扩充人员、聘请专家、寻求外部支持使用工料合同。
+```
+
+# 知识点
+```
+12.1 规划采购管理
+  确定要自制项目还是采购
+  如果采购的话采购的策略是什么采购的计划是什么
+  采购项目的工作范围是什么
+  供方选择的标准是什么
+  是否需要聘请专家进行独立的成本估算
+  最后输出招标文件
+12.2 实施采购
+  通过卖方的建议书结合采购文档，以投标人会议、广告、专家判断的形式选择卖方
+12.3 控制采购
+  监督卖房工作绩效，控制采购关系，实施必要的变更，最终关闭合同
+  
 ```
 
 # 易错题
