--- a/6、进度.md
+++ b/6、进度.md
@@ -2,7 +2,11 @@
 ```
 计划
   6.1 规划进度管理
+    输出：进度管理计划
   6.2 定义活动
+    输入：范围基准
+    工技：分解、滚动式规划
+    输出：活动清单、活动属性、里程碑清单
   6.3 排列活动顺序
   6.4 估算活动持续时间
   6.5 制定进度计划
@@ -12,22 +16,29 @@
 
 ## 工具与技术
 ```
+滚动式规划
+  一种迭代式的规划技术，详细规划近期的活动，在高层级上粗略的规划远期的工作。
+
+
 资源平衡
   主要目的是为了确保在项目整个执行过程中，资源需求与供应达到相对平衡的状态，减少资源的过度分配的加班，避免资源的闲置和浪费。提高资源的使用效率。
   往往资源平衡会导致关键路径的改变。
 资源平滑
   也是为了提高资源的使用效率，但是不会改变关键路径。调整非关键路径上的活动来提高资源使用效率。
-快速跟进
-  1、项目进度滞后、活动之间可以并行开展的情况，例如，软件开发中，需求分析、设计阶段可以同时开展部分模块的代码开发。
-  2、虽然项目紧迫，但是对风险有一定成熟能力。也可以考虑快速跟进。
+
 赶工
   1、关键路径上出现延误，需要尽快缩短工期的情况。
   2、有额外资源可以使用，成本增加在可接受范围内。
   3、没有可以并行执行的活动，且交付完成时间提前的变更已经批准。
+快速跟进
+  1、项目进度滞后、活动之间可以并行开展的情况，例如，软件开发中，需求分析、设计阶段可以同时开展部分模块的代码开发。
+  2、虽然项目紧迫，但是对风险有一定成熟能力。也可以考虑快速跟进。
+
 自下而上估算
   将项目分解成详细的工作包或活动，然后有负责该工作的人员进行估算，最后将估算的结果汇总起来，得到项目总体的估算。
 三点估算
   确定最乐观的估算O、最悲观的估算P、最可能的估算M 。然后期望事件TE = ( O + 4M + P ) / 6
+
 关键路径分析
   确定总体项目进度计划的灵活性
   识别关键路径
