--- a/6、进度.md
+++ b/6、进度.md
@@ -8,6 +8,8 @@
     工技：分解、滚动式规划
     输出：活动清单、活动属性、里程碑清单
   6.3 排列活动顺序
+    工技：紧前关系绘图法、确认和整合依赖关系、提前量和滞后量
+    输出：项目进度网络图
   6.4 估算活动持续时间
   6.5 制定进度计划
 监控
@@ -19,6 +21,20 @@
 滚动式规划
   一种迭代式的规划技术，详细规划近期的活动，在高层级上粗略的规划远期的工作。
 
+紧前关系绘图法
+  活动之间的逻辑关系包括完成到开始（FS）、完成到完成（FF）、开始到开始（SS）和开始到完成（SF）
+确认和整合依赖关系
+  类型：
+    强制性依赖关系：也称为硬逻辑关系，是项目活动中固有的依赖关系，通常由项目的技术要求、工作流程等决定。例如，在建筑项目中，必须先完成基础施工才能进行主体结构施工。
+    选择性依赖关系：也称为软逻辑关系，是项目团队基于经验、最佳实践等确定的依赖关系。例如，在软件开发项目中，可以根据团队的资源情况和进度要求，决定先进行功能模块 A 的开发还是功能模块 B 的开发。
+    外部依赖关系：项目活动与非项目活动之间的依赖关系。例如，项目的设备采购可能依赖于供应商的交货时间。
+  作用：
+    准确反映项目活动的先后顺序、识别关键路径和关键活动、优化项目进度计划
+提前量和滞后量
+  提前量：相对于紧前活动，紧后活动提前开始的时间量
+  滞后量：相对于紧前活动，紧后活动等待的时间量
+项目进度网络图
+  展示项目活动之间逻辑关系和时间顺序的图形工具（活动的依赖关系）
 
 资源平衡
   主要目的是为了确保在项目整个执行过程中，资源需求与供应达到相对平衡的状态，减少资源的过度分配的加班，避免资源的闲置和浪费。提高资源的使用效率。
@@ -48,5 +64,14 @@
     发现进度偏差采取措施进行调整
 
 ```
+
+<img width="500" alt="image" src="https://github.com/user-attachments/assets/059d2a13-1caa-46f7-b687-8ccc73e6c44f">
+<img width="500" alt="image" src="https://github.com/user-attachments/assets/1416459b-8291-41a1-a99f-0ead9374cb52">
 <img width="500" alt="image" src="https://github.com/user-attachments/assets/007c8d2d-1368-454c-af88-7c839e5f3381">
 <img width="500" alt="image" src="https://github.com/user-attachments/assets/0a91320d-881b-4a59-b9cd-0709b67a36db">
+
+
+
+
+
+
