--- a/6、进度.md
+++ b/6、进度.md
@@ -11,7 +11,10 @@
     工技：紧前关系绘图法、确认和整合依赖关系、提前量和滞后量
     输出：项目进度网络图
   6.4 估算活动持续时间
+    工技：类比估算、参数估算、三点估算、自下而上估算
+    输出：持续时间估算、估算依据
   6.5 制定进度计划
+    工技：进度网络分析、关键路径法、资源优化、进度压缩、敏捷发布规划、提前量滞后量
 监控
   6.6 控制进度
 ```
