--- a/6、进度.md
+++ b/6、进度.md
@@ -40,11 +40,7 @@
 项目进度网络图
   展示项目活动之间逻辑关系和时间顺序的图形工具（活动的依赖关系）
 
-资源平衡
-  主要目的是为了确保在项目整个执行过程中，资源需求与供应达到相对平衡的状态，减少资源的过度分配的加班，避免资源的闲置和浪费。提高资源的使用效率。
-  往往资源平衡会导致关键路径的改变。
-资源平滑
-  也是为了提高资源的使用效率，但是不会改变关键路径。调整非关键路径上的活动来提高资源使用效率。
+
 
 赶工
   1、关键路径上出现延误，需要尽快缩短工期的情况。
@@ -59,6 +55,17 @@
 三点估算
   确定最乐观的估算O、最悲观的估算P、最可能的估算M 。然后期望事件TE = ( O + 4M + P ) / 6
 
+进度网络分析
+  创建进度网络模型的一种综合技术，他采用了其他几种技术，例如：关键路径法、资源优化技术、建模技术，其他分析
+    当多个路径在同一时间点汇聚或分叉时，评估汇总进度储备，减少进度延误的可能性。
+    审查网络，看看关键路径是否存在高风险活动，是否需要使用进度储备，是否需要执行风险应对计划。
+  进度网络分析时一个反复进行的过程，一直持续到创建出可行的进度模型。
+
+资源平衡
+  主要目的是为了确保在项目整个执行过程中，资源需求与供应达到相对平衡的状态，减少资源的过度分配的加班，避免资源的闲置和浪费。提高资源的使用效率。
+  往往资源平衡会导致关键路径的改变。
+资源平滑
+  也是为了提高资源的使用效率，但是不会改变关键路径。调整非关键路径上的活动来提高资源使用效率。
 关键路径分析
   确定总体项目进度计划的灵活性
   识别关键路径
@@ -68,6 +75,11 @@
     发现进度偏差采取措施进行调整
 
 ```
+
+# 易错题
+```
+  评审进度计划之后，项目经理得出日期不切实际的结论，项目经理下一步应该怎么做？ 执行进度网络分析。
+```  
 
 <img width="500" alt="image" src="https://github.com/user-attachments/assets/059d2a13-1caa-46f7-b687-8ccc73e6c44f">
 <img width="500" alt="image" src="https://github.com/user-attachments/assets/1416459b-8291-41a1-a99f-0ead9374cb52">
