--- a/6、进度.md
+++ b/6、进度.md
@@ -14,7 +14,7 @@
     工技：类比估算、参数估算、三点估算、自下而上估算
     输出：持续时间估算、估算依据
   6.5 制定进度计划
-    工技：进度网络分析、关键路径法、资源优化、进度压缩、敏捷发布规划、提前量滞后量
+    工技：进度网络分析、关键路径法、资源优化、进度压缩、敏捷发布规划、提前量滞后量、模拟（蒙特卡洛技术）
     输出：进度基准、项目进度计划、进度数据、项目日历
 监控
   6.6 控制进度
@@ -73,7 +73,16 @@
     关键路径活动优先分配资源
   进度控制
     发现进度偏差采取措施进行调整
+```
+# 相关文件
 
+```
+项目进度计划
+  横道图
+  里程碑图
+  项目进度网络图
+项目日历
+  项目开展可用的工作日和工作班次
 ```
 
 # 易错题
