--- a/敏捷.md
+++ b/敏捷.md
@@ -59,6 +59,12 @@ Scrum主管
 
 ```
 
+# 通才型专家
+   团队成员在具备和擅长一项专业化的技能的同时，还拥有多种技能的工作经验。
+      I型人才只专注一项
+      T型人才会多种技能（跨职能型的内部资源）
+   如果项目中某些团队成员缺少关键主题的专业知识，可以在项目中添加跨职能型的内部资源。
+
 # 易错题
 ```
    在大型项目中，如果有多个团队处理项目，使用同一个产品待办列表，扩展整理范围，并考虑在产品待办列表中提供不同团队的视图。
