--- a/10、沟通.md
+++ b/10、沟通.md
@@ -21,6 +21,19 @@
     一些商店业主请求提供每周项目进度报告，需要更新沟通管理计划
     相关方参与计划更侧重于管理相关方的参与程度与方式
 ```
+# TT
+```
+沟通方法
+  交互式沟通
+    会议、电话、社交媒体、视屏会议。
+  推式沟通
+    向接收方发布信息：信件、报告、备忘录、电子邮件、博客、新闻稿。
+  拉式沟通
+    接受方在遵守相关安全规定下，主动去访问相关内容。门户网站、企业内网、电子在线课程、培训课程、经验教训。
+    适用于大量复杂信息、大量信息手中的情况。
+```
 
-# 沟通渠道
+# 易错题
+```
 在全球项目上，如果一个项目经理启动了本地预言的社交账户，更新项目状态，项目经理应该先审计新的沟通渠道并遵守PMO政策，然后让这些项目经理遵守PMO的沟通政策，然后更新沟通管理计划，包含新的沟通渠道。
+```
