--- a/7、成本.md
+++ b/7、成本.md
@@ -10,8 +10,9 @@
       分析影响：包括：挣值分析、偏差分析、趋势分析
       储备分析  
 ```
-# 成本类型
+# TT
 ```
+成本类型
   一、一致性成本：
     1、预防成本：
         为了防止出现质量问题而进行的活动所产生的成本。
@@ -46,6 +47,10 @@
     已经发生且无法收回的成本
     例如：在项目进行过程中，已经投入的资金、时间和精力等。
          成员1工作后离职，成员2覆盖了原有设计，成员1就是沉没成本。
+
+应急成本：
+  备用到已知风险，加到项目的基本成本上，解决风险问题。
+  管理储备用于未知风险。
 ```
 
 # TT
