--- a/7、成本.md
+++ b/7、成本.md
@@ -48,9 +48,10 @@
     例如：在项目进行过程中，已经投入的资金、时间和精力等。
          成员1工作后离职，成员2覆盖了原有设计，成员1就是沉没成本。
 
-应急成本：
+应急成本
   备用到已知风险，加到项目的基本成本上，解决风险问题。
-  管理储备用于未知风险。
+管理储备
+  用于未知风险。
 ```
 
 # TT
