--- a/7、成本.md
+++ b/7、成本.md
@@ -60,4 +60,6 @@
   比较当前项目与历史类似项目，估算当前项目成本、工期或其他参数。
 2、参数估算
   通过已知项目成本或工期的关键参数，如统计值、工作量、生产效率等，已知的项目参数来估算成本或工期。
+3、粗略的量级估算（Rough Order of Magnitude ， ROM）
+  项目启动阶段可以采用量级估算，初步将成本估算到 -25% ～ +75%，随后随着项目信息越来越详细，成本将会被估算到 -5% ～ +10%
 ```
