--- a/8、质量.md
+++ b/8、质量.md
@@ -61,8 +61,26 @@
 6、成本效益分析
    在规划质量管理阶段，通过成本效益分析，可以确定规划的质量活动是否有效的利用了成本。
 ```
-
+# 知识点
 ```
-其他：
+质量标准 VS 质量管理计划 VS 质量控制测量结果
+   质量管理计划
+      质量管理计划包含质量标准、目标、策略、控制流程。
+   质量控制测量结果
+      质量控制中具体的测量数据和结果，用于评价是否符合质量标准。
+
+   什么时候选质量管理计划
+      当客户反馈不符合客户的质量标准，质疑质量标准（是不是甲方乙方的质量标准不一致？）
+      是否符合客户的质量标准
+      制定质量控制流程时，项目早期如何进行质量管理。
+   什么时候选质量控制测量结果
+      检查项目的实际表现：如检查产品和服务的质量是否符合标准。
+      发现和分析质量偏差：如果产品出现了不符合质量要求的情况。
+      客户反馈与质量验证：客户对产品的质量提出了反馈或抱怨时，可以使用质量控制测量结果来作为直接证据，证明达到了质量标准。
+      
+```
+
+# 易错题
+```
 如果团队成员因为个人问题，比如为了奖金，进度。没有做质量控制相关的任务。项目经理可以选择让团队成员查阅质量管理计划，并且上报给项目发起人该团队成员的道德问题。
 ```
