--- a/9、资源.md
+++ b/9、资源.md
@@ -47,6 +47,9 @@
   妥协：一定程度满意、暂时解决问题或解决一部分问题，容易导致“双输”局面。
   强迫：牺牲一方，推行一方；只提供 输/赢 方案。通常解决紧急问题。
   合作：通常会实现“双赢”，综合考虑不同观点意见，使用合作态度、开放式对话达成共识和承诺。
+6、团队建设
+  状态审查会上的几分钟议程。
+  非工作环境为改善人与人关系的活动。
 ```
 
 # 塔克曼阶梯理论
