--- a/9、资源.md
+++ b/9、资源.md
@@ -48,8 +48,10 @@
   强迫：牺牲一方，推行一方；只提供 输/赢 方案。通常解决紧急问题。
   合作：通常会实现“双赢”，综合考虑不同观点意见，使用合作态度、开放式对话达成共识和承诺。
 6、团队建设
-  状态审查会上的几分钟议程。
-  非工作环境为改善人与人关系的活动。
+  例如：状态审查会上的几分钟议程。非工作环境为改善人与人关系的活动。
+  用于改善团队成员之间的配合问题。
+7、认可与奖励
+  用于提升员工积极性。比如可以满足员工的需要。
 ```
 
 # 塔克曼阶梯理论
