--- a/9、资源.md
+++ b/9、资源.md
@@ -39,18 +39,20 @@
 3、RACI （负责、批准、咨询、知情）
   明确每个活动每个人的职责，是负责、执行、咨询、还是知情。可以明确每个人的职责，避免职责不清导致的工作冲突、重复、遗漏。
   例如 内部外部资源发生冲突，可以使用RACI。
-4、项目组织图
+4、资源分解结构（Resource Breakdown Structure RBS）
+  对项目中所需资源进行分类和组织的工具。
+5、项目组织图
   以图形的方式展示项目团队成员及其报告关系。
-5、冲突管理
+6、冲突管理
   回避：问题推给别人、将问题推到准备充分的时候、从实际或潜在的冲突中退出。
   包容：强调一致而非差异、考虑其他方需要，为维持和谐与关系各退一步。
   妥协：一定程度满意、暂时解决问题或解决一部分问题，容易导致“双输”局面。适用于双方意见的平均值。
   强迫：牺牲一方，推行一方；只提供 输/赢 方案。通常解决紧急问题。
   合作：通常会实现“双赢”，综合考虑不同观点意见，使用合作态度、开放式对话达成共识和承诺。
-6、团队建设
+7、团队建设
   例如：状态审查会上的几分钟议程。非工作环境为改善人与人关系的活动。
   用于改善团队成员之间的配合问题。
-7、认可与奖励
+8、认可与奖励
   用于提升员工积极性。比如可以满足员工的需要。
 ```
 
