--- a/13、相关方.md
+++ b/13、相关方.md
@@ -2,6 +2,7 @@
 ```
 启动
    13.1 识别相关方
+      TT ： 相关方分析
       输出： 相关方登记册
 计划
    13.2 规划相关方参与
@@ -57,6 +58,7 @@
    1、项目进入生命周期不同阶段；
    2、当前相关方不再参与项目、或出现新的相关方
    3、组织内部或更大区域的相关方社区发生重大变化
+   如果更换了新的项目发起人，新的项目发起人也是相关方，需要识别，并且与其了解战略目标，确保理解一致。
 权利利益方格
    权利高、利益高：重点管理、密切关注
    权利高、利益低：令其满意
