--- a/13、相关方.md
+++ b/13、相关方.md
@@ -43,6 +43,7 @@
                  问题管理可以包括问题的记录、分类、分配、跟踪、解决等环节。
                  确保问题及时处理，避免对项目造成不良影响。
    如果相关方之间意见不一致，项目可能失败，需要制定相关方参与计划，解决相关方的顾虑。
+   相关方参与计划可以提高相关方的参与度。
 ```
 
 ```
