--- a/12、采购.md
+++ b/12、采购.md
@@ -51,7 +51,9 @@
 12.2 实施采购
   通过卖方的建议书结合采购文档，以投标人会议、广告、专家判断的形式选择卖方
 12.3 控制采购
-  监督卖房工作绩效，控制采购关系，实施必要的变更，最终关闭合同
+  监督卖方工作绩效，控制采购关系，实施必要的变更，最终关闭合同
+  索赔管理：
+    有争议的变更叫做索赔管理，比如卖房解释台风破坏了工厂，无法交付，则需要先启动索赔调查，确认是否属实。
   
 ```
 
