--- a/敏捷.md
+++ b/敏捷.md
@@ -45,8 +45,8 @@ Scrum主管
 
 # 迭代的方法
 ```
-1、六西格玛 DMAIC 流程 定义（Define）、测量（Measure）、分析（Analyze）、改进（Improve）、控制（Control）
-2、PDCA（计划、执行、检查、行动）。
+1、六西格玛 DMAIC 流程 定义（Define）、测量（Measure）、分析（Analyze）、改进（Improve）、控制（Control）（偏向于质量）
+2、PDCA（计划、执行、检查、行动）。（偏向于质量）
 3、敏捷方法
 3、精益生产方法
    1、价值流分析（Value Stream Mapping）
