--- a/敏捷.md
+++ b/敏捷.md
@@ -40,7 +40,9 @@ Scrum主管
    包含几列，todo，doing，done，可以设置限制在制品（WIP）数量
    注重工作流程优化、跨职能团队协作、活着需要简单直观的任务管理工具
 6、scrum 板
-   项目强调scrum方法、强调迭代开发、强调自组织 
+   项目强调scrum方法、强调迭代开发、强调自组织
+7、待办事项列表
+   待办事项列表的细化选择一个迭代持续时间。
 ```
 
 # 迭代的方法
