--- a/敏捷.md
+++ b/敏捷.md
@@ -62,13 +62,16 @@ Scrum主管
    PO、SM、开发团队参加，如果时间太长，可以仅仅开发团队参加，Scrum选择参加，敏捷中团队自组织。
 
 ```
-
-# 通才型专家
+# 知识点
+```
+通才型专家
    团队成员在具备和擅长一项专业化的技能的同时，还拥有多种技能的工作经验。
       I型人才只专注一项
       T型人才会多种技能（跨职能型的内部资源）
    如果项目中某些团队成员缺少关键主题的专业知识，可以在项目中添加跨职能型的内部资源。
-
+迷你瀑布陷阱
+   例如：收集所有需求，对所有需求设计规格，然后开发
+```
 # 易错题
 ```
    如果多个相关方抵制从预测到敏捷的变更，最佳的方案是，寻求一个愿意支持变更到敏捷的高管。
