--- a/敏捷.md
+++ b/敏捷.md
@@ -39,6 +39,7 @@ Scrum主管
 5、看板
    包含几列，todo，doing，done，可以设置限制在制品（WIP）数量
    注重工作流程优化、跨职能团队协作、活着需要简单直观的任务管理工具
+   解决由于缺乏信息导致的工作延迟或障碍打断
 6、scrum 板
    项目强调scrum方法、强调迭代开发、强调自组织
 7、待办事项列表
