--- a/13、相关方.md
+++ b/13、相关方.md
@@ -46,7 +46,9 @@
    相关方参与计划可以提高相关方的参与度。
 ```
 
+# 易错题
 ```
+   如果相关方一再拒绝开会请求，可以上报项目发起人，说明问题。
    通过研究报纸文章、确定哪些团体可能影响项目是在识别相关方。
    如果项目延迟，可能会引起相关方不满，要先通知相关方，管理他们的期望。
    如果高级经理很少参与项目、并且抱怨项目延期，项目经理需要控制相关方参与程度。
