--- a/11、风险.md
+++ b/11、风险.md
@@ -59,6 +59,10 @@
 
 储备分析
    在项目的任意时间点，比较剩余应急储备与剩余的风险量，从而确定剩余储备是否仍然合理。计算储备金，使用储备分析。
+
+风险审计
+   评估风险管理过程的有效性。
+   例如：项目屡次请求增加预算和延期计划，导致成本超支，以及经济问题可以进行风险审查。
 ```
 
 
@@ -91,6 +95,7 @@
    风险应对措施的执行情况：评估风险应对的执行效果，包括 已实施的、正在实施的、未实施的风险应对措施等。
    风险管理建议：根据风险绩效评估结果，提出相应的建议，如调整风险应对策略，加强风险监控等。
 ```
+
 
 ```
    在更新风险登记册前，需要先确定适当的风险应对
