--- a/10、沟通.md
+++ b/10、沟通.md
@@ -36,4 +36,5 @@
 # 易错题
 ```
 在全球项目上，如果一个项目经理启动了本地预言的社交账户，更新项目状态，项目经理应该先审计新的沟通渠道并遵守PMO政策，然后让这些项目经理遵守PMO的沟通政策，然后更新沟通管理计划，包含新的沟通渠道。
+如果利益相关者绕过项目经理直接与程序员打交道，需要促进团队采用沟通管理计划。
 ```
