--- a/13、相关方.md
+++ b/13、相关方.md
@@ -44,6 +44,8 @@
                  确保问题及时处理，避免对项目造成不良影响。
    如果相关方之间意见不一致，项目可能失败，需要制定相关方参与计划，解决相关方的顾虑。
    相关方参与计划可以提高相关方的参与度。
+3、管理相关方参与
+   在组织内，会经常遇到变革的内容，变革也会遇到层层阻力，所以管理相关方参与的时候，在适当时候引导相关方参与，减少变革的阻力。
 ```
 
 # 易错题
