--- a/敏捷.md
+++ b/敏捷.md
@@ -74,6 +74,8 @@ Scrum主管
    如果项目中某些团队成员缺少关键主题的专业知识，可以在项目中添加跨职能型的内部资源。
 迷你瀑布陷阱
    例如：收集所有需求，对所有需求设计规格，然后开发
+部门孤岛
+   部门孤岛内的成员，I型人才多，T型人才少。
 ```
 # 易错题
 ```
