--- a/8、质量.md
+++ b/8、质量.md
@@ -47,8 +47,10 @@
          改进 Improve
          控制 Control
       定义、测量、分析、改进和控制这五个阶段是一个循环递进的过程。在每个阶段完成后，根据结果进行调整和优化，然后进入下一个阶段，不断重复这个过程以实现持续改进，具有明显的迭代特征。
-   2、质量审计
+
+   ✅ 2、质量审计
       确定项目质量活动是否遵循组织和项目的政策、过程、程序的一种过程，可以识别项目的违规、差距、不足，可以避免出现大量返工，超支的情况。
+
    3、面向X的设计（Design for X）
       X代表多种因素，常见的有面向制造的设计（Design for Manufacture，DFM）、面向装配的设计（Design for Assembly，DFA）、面向可靠性的设计（Design for Reliability，DFR）等。
       1、面向制造的设计（DFM）
