--- a/敏捷.md
+++ b/敏捷.md
@@ -77,6 +77,12 @@ Scrum主管
 部门孤岛
    部门孤岛内的成员，I型人才多，T型人才少。
 ```
+
+# 敏捷的质量管理
+```
+   以迭代的方式交付增量，团队专注于每个迭代的软件增量的质量，需要专注于一个迭代小批量产品的质量。
+```
+
 # 易错题
 ```
    如果多个相关方抵制从预测到敏捷的变更，最佳的方案是，寻求一个愿意支持变更到敏捷的高管。
