--- a/11、风险.md
+++ b/11、风险.md
@@ -46,6 +46,7 @@
       指通过采取措施。减轻风险出现的概率和影响
          多次测试、选择更可靠的卖方。
          备份数据。
+         通过构建产品原型，并从相关方获得反馈，可以提前发现问题和潜在的威胁，从而采取措施减轻风险对项目的影响。
    5、接受
       承认风险存在，但不主动采取措施。一般用于低优先级的风险。
          主动：建立应急储备、预留时间、资金。
