--- a/敏捷.md
+++ b/敏捷.md
@@ -77,6 +77,8 @@ Scrum主管
    例如：收集所有需求，对所有需求设计规格，然后开发
 部门孤岛
    部门孤岛内的成员，I型人才多，T型人才少。
+冲刺演示
+   安排足够的冲刺演示，收集利益相关者的早期反馈，可以避免出现很多功能没有达到的问题。
 ```
 
 # 敏捷的质量管理
