--- a/9、资源.md
+++ b/9、资源.md
@@ -49,9 +49,14 @@
   妥协：一定程度满意、暂时解决问题或解决一部分问题，容易导致“双输”局面。适用于双方意见的平均值。
   强迫：牺牲一方，推行一方；只提供 输/赢 方案。通常解决紧急问题。
   合作：通常会实现“双赢”，综合考虑不同观点意见，使用合作态度、开放式对话达成共识和承诺。
+
 7、团队建设
+  改善团队成员之间的配合问题。
   例如：状态审查会上的几分钟议程。非工作环境为改善人与人关系的活动。
-  用于改善团队成员之间的配合问题。
+7、塔克曼阶梯理论
+  改善团队成员之间的协作问题、速度、效率问题。
+  例如：如果团队两个成员被替换，团队速度下降，业绩下滑，可以引导团队重新回到组建和震荡阶段。可以改善团队成员之间的相互协作能力。
+
 8、认可与奖励
   用于提升员工积极性。比如可以满足员工的需要。
 9、培训
