--- a/11、风险.md
+++ b/11、风险.md
@@ -36,6 +36,7 @@
       如果某项威胁不在项目范围内，超出了项目经理的权限，需要上报。被上报的风险在项目集、项目组合层面、或组织的其他部门管理，不在项目层面。
       对于上报的威胁，相关人员愿意承担相关责任，这一点非常重要。
          例如：项目集经理改变了风险项目的优先级，导致项目正在严重延期。需要上报给项目发起人。
+         例如：与项目集经理联系，寻求资源以实施应急。
    2、规避
       通常用于发生概率高、具有严重负面影响的风险。
          改方案、放弃项目、消除威胁的原因、延长进度计划、改变项目策略、缩小范围。
