--- a/10、沟通.md
+++ b/10、沟通.md
@@ -23,7 +23,7 @@
 ```
 # TT
 ```
-沟通方法
+1、沟通方法
   交互式沟通
     会议、电话、社交媒体、视屏会议。
   推式沟通
@@ -31,6 +31,14 @@
   拉式沟通
     接受方在遵守相关安全规定下，主动去访问相关内容。门户网站、企业内网、电子在线课程、培训课程、经验教训。
     适用于大量复杂信息、大量信息手中的情况。
+2、沟通技术
+  在解决集中办公或虚拟团队的团队建设方面，沟通技术至关重要。他有助于为集中办公团队营造一个融洽的环境，促进虚拟团队（尤其是分散在不同时区的团队）更好的相互理解。
+  可能的沟通技术包括：
+    共享门户
+    视屏会议
+    音频会议
+    电子邮件/聊天软件
+  
 ```
 
 # 易错题
