--- a/敏捷.md
+++ b/敏捷.md
@@ -82,6 +82,8 @@ Scrum主管
    部门孤岛内的成员，I型人才多，T型人才少。
 冲刺演示
    安排足够的冲刺演示，收集利益相关者的早期反馈，可以避免出现很多功能没有达到的问题。
+频繁的团队检查点
+   安排定期的时间点对项目进度、问题、计划进行审查和讨论。可以是每日站会、每周团队会议或项目需求定制的特定时间间隔的会议。
 ```
 
 # 敏捷的质量管理
