--- a/敏捷.md
+++ b/敏捷.md
@@ -65,6 +65,7 @@ Scrum主管
 每日站会：
    PO、SM、开发团队参加，如果时间太长，可以仅仅开发团队参加，Scrum选择参加，敏捷中团队自组织。
    完成了什么，计划干什么，障碍风险问题是什么
+   只识别问题，而不解决，可以在会议结束之前，将问题同步到问题日志中，然后开启另一次会议解决问题。
 回顾会议：
    提高效率
    总结经验
