--- a/7、成本.md
+++ b/7、成本.md
@@ -63,3 +63,10 @@
 3、粗略的量级估算（Rough Order of Magnitude ， ROM）
   项目启动阶段可以采用量级估算，初步将成本估算到 -25% ～ +75%，随后随着项目信息越来越详细，成本将会被估算到 -5% ～ +10%
 ```
+# 知识点
+```
+控制成本
+  有一些题目给出SPI 1.051， CPI 1.02 ，首先想到先分析，再执行，可以考虑选择偏差分析。
+  如果给到EV PV之类的选择挣值分析。
+  给到SV CV考虑趋势分析。
+```
