--- a/7、成本.md
+++ b/7、成本.md
@@ -67,6 +67,7 @@
 ```
 控制成本
   有一些题目给出SPI 1.051， CPI 1.02 ，首先想到先分析，再执行，可以考虑选择偏差分析。
-  如果给到EV PV之类的选择挣值分析。
-  给到SV CV考虑趋势分析。
+    趋势分析 EAC/ETC/TCPI 估算类的
+    偏差分析 SV/CV/SPI/CPI
+    挣值分析 EV/PV/AC
 ```
