--- a/4、整合.md
+++ b/4、整合.md
@@ -77,6 +77,18 @@
     个体知识，难以明确表达的知识、信念、洞察力、经验、诀窍
 
 项目收尾，可交付成果验收，在项目质保期内，如果识别到一个影响环境的缺陷，运营部门应该负责解决这个问题。
+
+配置管理
+  目的
+    管理产品版本，确保项目产品一致性
+    可追溯性
+    团队协作
+    支持项目或产品的变更管理
+  工具
+    git svn
+    配置管理数据库
+    maven gradle
+  
 ```
 
 ```
