--- a/12、采购.md
+++ b/12、采购.md
@@ -52,8 +52,12 @@
   通过卖方的建议书结合采购文档，以投标人会议、广告、专家判断的形式选择卖方
 12.3 控制采购
   监督卖方工作绩效，控制采购关系，实施必要的变更，最终关闭合同
-  索赔管理：
+  索赔管理
     有争议的变更叫做索赔管理，比如卖房解释台风破坏了工厂，无法交付，则需要先启动索赔调查，确认是否属实。
+  绩效审查
+    对质量、资源、进度和成本绩效进行测量、比较和分析，以审查合同工作的绩效。
+    其中包括确定工作包提前或落后于进度计划、超出或低于预算，以及是否存在资源或质量问题。
+    采购绩效审查是对供应商合同绩效进行管理的重要工具。
   
 ```
 
