--- a/5、范围.md
+++ b/5、范围.md
@@ -41,7 +41,13 @@
    相关方来自不同国家
 ```
 
+# 知识点
 ```
+WBS
+   包括了全部产品和项目工作，包括项目管理工作。
+   确保没有遗漏的工作，也没有多余的工作。
+   工作包即使是外包，也不能删除。
+
    如果不清楚可交付物是否满足客户的需求，可以参考需求跟踪矩阵，需求跟踪矩阵描述需求与交付物的关系。
    项目经理在帮助其他经理提供某个问题的解决方案时，可以使用什么防止任何人对结果产生不适当的影响？ 德尔菲技术，相关专家匿名参与，观点归纳重复几轮，可能会取得一致意见。
 ```
