--- a/敏捷.md
+++ b/敏捷.md
@@ -66,6 +66,7 @@ Scrum主管
    PO、SM、开发团队参加，如果时间太长，可以仅仅开发团队参加，Scrum选择参加，敏捷中团队自组织。
    完成了什么，计划干什么，障碍风险问题是什么
    只识别问题，而不解决，可以在会议结束之前，将问题同步到问题日志中，然后开启另一次会议解决问题。
+   常见的一个反模式是，变成了状态报告会议。团队可以举办自己的站会。自组织，轮流主持站会。
 回顾会议：
    提高效率
    总结经验
@@ -86,6 +87,8 @@ Scrum主管
    安排足够的冲刺演示，收集利益相关者的早期反馈，可以避免出现很多功能没有达到的问题。
 频繁的团队检查点
    安排定期的时间点对项目进度、问题、计划进行审查和讨论。可以是每日站会、每周团队会议或项目需求定制的特定时间间隔的会议。
+原型设计
+   能收到关于早期需求的反馈相应的调整设计。
 ```
 
 # 敏捷的质量管理
@@ -98,7 +101,6 @@ Scrum主管
    如果多个相关方抵制从预测到敏捷的变更，最佳的方案是，寻求一个愿意支持变更到敏捷的高管。
    在大型项目中，如果有多个团队处理项目，使用同一个产品待办列表，扩展整理范围，并考虑在产品待办列表中提供不同团队的视图。
    敏捷实践 使用产品列表、产品增量将工作划分为多个版本。
-   原型设计：能收到关于早期需求的反馈相应的调整设计。
    确定待办事项优先级：团队成员觉得可能有延期的问题，其他团队也依赖这个用户故事，可以找PO重新确定优先级。
    管理质量：在敏捷中、较短迭代计划和执行周期，可以通过定期的回顾会议，来管理质量。
 ```
