--- a/敏捷.md
+++ b/敏捷.md
@@ -67,6 +67,7 @@ Scrum主管
    完成了什么，计划干什么，障碍风险问题是什么
    只识别问题，而不解决，可以在会议结束之前，将问题同步到问题日志中，然后开启另一次会议解决问题。
    常见的一个反模式是，变成了状态报告会议。团队可以举办自己的站会。自组织，轮流主持站会。
+   过一下任务板或看板，其他团队依赖敏捷团队的输出，可以参加每日站会。
 回顾会议：
    提高效率
    总结经验
