--- a/敏捷.md
+++ b/敏捷.md
@@ -99,6 +99,7 @@ Scrum主管
 
 # 易错题
 ```
+   比更多的项目可以考虑用敏捷
    如果多个相关方抵制从预测到敏捷的变更，最佳的方案是，寻求一个愿意支持变更到敏捷的高管。
    在大型项目中，如果有多个团队处理项目，使用同一个产品待办列表，扩展整理范围，并考虑在产品待办列表中提供不同团队的视图。
    敏捷实践 使用产品列表、产品增量将工作划分为多个版本。
