--- a/11、风险.md
+++ b/11、风险.md
@@ -45,6 +45,7 @@
          外包、保险、担保书。
    4、减轻
       指通过采取措施。减轻风险出现的概率和影响
+         项目经理离职，任命新的项目经理。
          多次测试、选择更可靠的卖方。
          备份数据。
          通过构建产品原型，并从相关方获得反馈，可以提前发现问题和潜在的威胁，从而采取措施减轻风险对项目的影响。
