--- a/敏捷.md
+++ b/敏捷.md
@@ -90,6 +90,8 @@ Scrum主管
    安排定期的时间点对项目进度、问题、计划进行审查和讨论。可以是每日站会、每周团队会议或项目需求定制的特定时间间隔的会议。
 原型设计
    能收到关于早期需求的反馈相应的调整设计。
+自组织
+   PO怀疑团队成员疲惫，可以向团队提出来，自己解决。
 ```
 
 # 敏捷的质量管理
