--- a/敏捷.md
+++ b/敏捷.md
@@ -17,6 +17,7 @@ scrum待办事项
 # 敏捷中各角色的职责
 ```
 产品负责人
+   由单人负责，不要身兼数职。
    确保工作按照领导层的指示方向和产品愿景展开
    了解到新的需求时，将需求添加到产品待办事项列表中
    对于严重的问题时，在PBL中添加高优先级的工作项。
