--- a/8、质量.md
+++ b/8、质量.md
@@ -80,6 +80,9 @@
       检查项目的实际表现：如检查产品和服务的质量是否符合标准。
       发现和分析质量偏差：如果产品出现了不符合质量要求的情况。
       客户反馈与质量验证：客户对产品的质量提出了反馈或抱怨时，可以使用质量控制测量结果来作为直接证据，证明达到了质量标准。
+
+控制图
+   失控： 连续七个点在水平线上方，在控制界限内。
       
 ```
 
